start of security